@@ -6,6 +6,8 @@ v1.1.4
   championship. To use this, create a championship event for the track and layout you wish to import results to. Then,
   click on "Manage Event" on the Championship page and select the session results files to import from.
 * Removed unnecessary duplication of entrants on Championship pages.
+* Fixes an issue with illegal Byte Order Marks preventing some track info files from being read.
+* Fixes an issue where some Live Map cars would not properly clear on server restart.
 
 v1.1.3
 ------
